Fix overflow of body for md-toast

--- a/app/basement/static/css/main.css
+++ b/app/basement/static/css/main.css
@@ -226,6 +226,10 @@ a {
 
 /* MD Toast */
 
+.md-toast-animating {
+  overflow: initial !important;
+}
+
 md-toast {
   position: fixed;
   left: 10px;
